src/test/deca/context/invalid/return-invalidType.context
return-invalidType.deca:4: